--- a/css/index.css
+++ b/css/index.css
@@ -41,17 +41,25 @@ body{
 
 .navImage{
 
-    width: clamp(260px, 65vw, 765px);
+    width: clamp(290px, 65vw, 765px);
     transition: all 0.6s ease;
 
 }
 
 .navImageChange{
 
-    width: 115px;
+    width: 150px;
     position: fixed;
     top: 10px;
-    left: 25px;
+    left: 15px;
+    background-color: rgba(255, 255, 255, 0.7);
+    padding: 5px;
+
+}
+
+.navImageGallery{
+
+    width: 125px !important;
 
 }
 
@@ -59,7 +67,7 @@ body{
  
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: center;
     width: clamp(300px, 70vw, 850px);
     height: 40px;
     transition: all 0.6s ease;
@@ -70,22 +78,153 @@ body{
 .navigationButtonHolderChange{
 
     position: fixed;
-    top: 10px;
-    right: 25px;
+    top: 20px;
+    right: 20px;
     width: clamp(300px, 70vw, 650px);
     margin-top: 0px;
+
+}
+
+.navigationButtonHolder div{
+
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    width: 50%;
 
 }
 
 .navButton{
 
     background-color: rgba(255, 255, 255, 0.7);
-    font-size: 1.2em;
+    font-size: 1.1em;
     border-radius: 20px;
-    padding: 6px 14px;
+    padding: 8px 16px;
     cursor: pointer;
     transition: 0.4s ease;
     margin: 0;
+}
+
+.burger{
+
+    background-color: rgba(255, 255, 255, 0.4);
+    cursor: pointer;
+    border: 3px solid rgba(0,0,0,0.8);
+    width: 28px;
+    height: 28px;
+    border-radius: 20px;
+    position: fixed;
+    top: 20px;
+    right: 25px;
+    visibility: hidden;
+    transition: 0.4s ease;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+}
+
+.hideBurger{
+
+    background-color: rgba(255, 255, 255, 0);
+    border: 3px solid rgba(0, 0, 0, 0);
+
+}
+
+.burger span {
+
+    width: 90%;
+    height: 4px;
+    background: rgba(0, 0, 0, 1);
+    transition: all 0.4s ease;
+    display: block;
+    position: absolute;
+    visibility: hidden;
+
+}
+
+.burger span:nth-of-type(1) {
+
+    transform: rotate(-45deg);
+
+}
+
+.burger span:nth-of-type(2) {
+
+    transform: rotate(45deg);
+
+}
+
+@media screen and (max-width: 1000px) {
+
+    .navButton{
+     
+        font-size: 1em;
+
+    }
+    
+}
+
+@media screen and (max-width: 700px) {
+
+    .navigationButtonHolder{
+
+        width: clamp(300px, 90vw, 550px);
+
+    }
+
+    .navigationButtonHolderChange{
+
+        display: none;
+
+    }
+
+}
+
+@media screen and (max-width: 530px) {
+
+    .navigationButtonHolder{
+
+        flex-direction: column;
+        height: auto;
+
+    }
+
+    .navigationButtonHolder div{
+
+        width: 300px;
+
+    }
+
+    .navigationButtonHolder div:nth-of-type(2){
+
+        padding-top: 25px;
+
+    }
+
+}
+
+@media screen and (max-width: 426px) {
+
+    .burger{
+
+        width: 36px;
+        height: 36px;
+        border-radius: 30px;
+        bottom: 20px;
+        right: auto;
+        top: auto;
+
+    }
+
+    .navImageChange{
+
+        width: 220px;
+        top: 5px;
+        left: auto;
+
+    }
+
 }
 
 @media (hover : hover){
@@ -95,6 +234,13 @@ body{
         background-color: rgba(255, 255, 255, 0.9);
         padding: 8px 16px;
         font-size: 1.3em;
+        border: 1px solid black;
+
+    }
+
+    .burger:hover{
+
+        background-color: rgba(255, 255, 255, 0.8);
 
     }
 
