--- a/css/portfolioGallery.css
+++ b/css/portfolioGallery.css
@@ -42,14 +42,20 @@ Styling for the Portfolio Gallery on the Homepage (index.php)
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: rgba(255, 255, 255, 0.7);
+    background-color: rgba(255, 255, 255, 0.8);
     border-radius: 100%;
     z-index: 21;
-    font-size: clamp(50px,10vw,65px);
+    font-size: clamp(50px,8vw,65px);
     cursor: pointer;
-    transition: 0.5s ease;
-    display: none;
+    transition: all 0.5s ease;
+    visibility: hidden;
     
+
+}
+
+.show{
+
+    visibility: visible;
 
 }
 
