--- a/css/index.css
+++ b/css/index.css
@@ -18,7 +18,7 @@ body{
     -moz-box-shadow: inset 0px 0px 0px 15px white;
     box-shadow: inset 0px 0px 0px 15px white;
     transition: all 0.6s ease;
-    z-index: 20;
+    z-index: 17;
     position: fixed;
     background-color: rgba(255, 255, 255, 0.5);
     width: 100vw;
@@ -70,7 +70,7 @@ body{
     justify-content: center;
     width: clamp(300px, 70vw, 850px);
     height: 40px;
-    transition: all 0.6s ease;
+    transition: transform 0.6s ease;
     margin-top: 20px;
     background-color: rgba(255, 255, 255, 0.4);
     border-radius: 44px;
@@ -104,8 +104,10 @@ body{
     border-radius: 20px;
     padding: 8px 16px;
     cursor: pointer;
-    transition: 0.4s ease;
+    transition: all 0.4s ease;
     margin: 0;
+    box-shadow: 0.09rem 0.09rem 0.3rem rgba(0, 0, 0, 0.2),
+            -0.07rem -0.07rem 0.25rem rgba(0, 0, 0, 0.04);
 }
 
 .burger{
@@ -124,6 +126,7 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
+    z-index: 22;
 
 }
 
@@ -159,6 +162,28 @@ body{
 
 }
 
+.burgerMenu{
+
+    background-color: rgba(255, 255, 255, 0.9);
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    border-radius: 50%;
+    transform: scale(0);
+    outline: 1px solid rgba(0,0,0,0);
+    outline-offset: -15px;
+    transition: all 0.4s ease;
+    z-index: 21;
+}
+
+.burgerMenuOpen{
+
+    outline: 1px solid rgba(0, 0, 0, 0.8);
+    border-radius: 0%;
+    transform: scale(1);
+    
+}
+
 @media screen and (max-width: 1000px) {
 
     .navButton{
@@ -179,7 +204,8 @@ body{
 
     .navigationButtonHolderChange{
 
-        display: none;
+        transform: scale(0);
+        opacity: 0;
 
     }
 
@@ -191,6 +217,9 @@ body{
 
         flex-direction: column;
         height: auto;
+        width: 275px;
+        padding: 10px 0px;
+        border-radius: 10px;
 
     }
 
@@ -231,13 +260,40 @@ body{
 
 }
 
+.navigationButtonHolderOpen {
+
+    top: auto;
+    position: fixed;
+    z-index: 23;
+    right: auto;
+    display: flex;
+    flex-direction: column;
+    width: 175px;
+    box-shadow: 0.09rem 0.09rem 0.3rem rgba(0, 0, 0, 0.2),
+        -0.07rem -0.07rem 0.25rem rgba(0, 0, 0, 0.04);
+    height: 300px;
+    justify-content: space-evenly;
+    border-radius: 10px;
+    transform: scale(1);
+    opacity: 1;
+
+}
+
+.navigationButtonHolderOpen div {
+
+    flex-direction: column;
+    height: 50%;
+    padding: 0;
+    width: 150px;
+
+}
+
 @media (hover : hover){
 
     .navButton:hover{
 
         background-color: rgba(255, 255, 255, 0.9);
         padding: 10px 18px;
-        
         border: 1px solid black;
 
     }
