--- a/css/portfolioGallery.css
+++ b/css/portfolioGallery.css
@@ -44,11 +44,12 @@ Styling for the Portfolio Gallery on the Homepage (index.php)
     justify-content: center;
     background-color: rgba(255, 255, 255, 0.8);
     border-radius: 100%;
-    z-index: 21;
+    z-index: 18;
     font-size: clamp(50px,8vw,65px);
     cursor: pointer;
     transition: all 0.5s ease;
     visibility: hidden;
+    opacity: 0;
     
 
 }
@@ -56,6 +57,7 @@ Styling for the Portfolio Gallery on the Homepage (index.php)
 .show{
 
     visibility: visible;
+    opacity: 1;
 
 }
 
