Start of functionality for loading content dynamically on the home page

--- a/css/index.css
+++ b/css/index.css
@@ -3,6 +3,7 @@ Styling for the Home Page (index.php)
 **************************************************************************/
 
 @import url(portfolioGallery.css);
+@import url(contactModal.css);
 
 body{
  
