About Page Nearly Finished

--- a/css/index.css
+++ b/css/index.css
@@ -20,7 +20,10 @@ body{
     overflow-x: hidden;
     width: 100%;
     top: 73px;
-    background-color: red;
+    mask: linear-gradient(180deg, transparent, white 2%, white 98%, transparent);
+    /* background-color: red; */
+    display: flex;
+    justify-content: center;
 
 }
 
