--- a/css/pages.css
+++ b/css/pages.css
@@ -1,7 +1,16 @@
 .aboutPage{
  
     height: 100%;
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-around;
+    width: clamp(300px, 95vw, 1000px);
+    margin: 15px 0px;
 
+}
+
+.aboutPage::-webkit-scrollbar {
+    display: none;
 }
 
 .workerContainer{
@@ -10,5 +19,71 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    padding: 10px 0px 0px 0px;
+
+}
+
+.workerContainer img{
+
+    width: clamp(200px,25vw,225px);
+    padding: 10px;
+    border-radius: 10px;
+    background-color: rgba(255, 255, 255, 0.8);
+    box-shadow: 0.09rem 0.09rem 0.3rem rgba(0, 0, 0, 0.2),
+            -0.07rem -0.07rem 0.25rem rgba(0, 0, 0, 0.04);
+
+}
+
+.workerText{
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 25px 15px;
+    border-radius: 10px;
+    background-color: rgba(255, 255, 255, 0.8);
+    box-shadow: 0.09rem 0.09rem 0.3rem rgba(0, 0, 0, 0.2),
+        -0.07rem -0.07rem 0.25rem rgba(0, 0, 0, 0.04);
+    margin-top: 10px;
+
+}
+
+.workerText h1, .workerContainer h3, .workerContainer p{
+
+    margin: 0;
+
+}
+
+.workerText h1{
+
+    font-size: 1.7em;
+
+}
+
+.workerText h3{}
+
+.workerText p{
+
+    width: clamp(250px, 50vw, 300px);
+    margin-top: 15px;
+
+}
+
+@media screen and (max-width: 768px){
+
+    .aboutPage{
+
+        flex-direction: column;
+        align-items: center;
+
+    }
+
+    .workerContainer:nth-of-type(2) {
+
+        padding-bottom: 25px;
+        padding-top: 50px;
+
+    }
 
 }
