--- a/css/pages.css
+++ b/css/pages.css
@@ -1,6 +1,11 @@
+/*
+
+About page CSS
+
+*/
 .aboutPage{
  
-    height: 100%;
+    /* height: 100%; */
     display: flex;
     align-items: flex-start;
     justify-content: space-around;
@@ -19,13 +24,13 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    padding: 10px 0px 0px 0px;
+    padding: 10px 0px 15px 0px;
 
 }
 
 .workerContainer img{
 
-    width: clamp(200px,25vw,225px);
+    width: 200px;
     padding: 10px;
     border-radius: 10px;
     background-color: rgba(255, 255, 255, 0.8);
@@ -61,12 +66,11 @@
 
 }
 
-.workerText h3{}
-
 .workerText p{
 
     width: clamp(250px, 50vw, 300px);
     margin-top: 15px;
+    font-size: 1.1em;
 
 }
 
@@ -79,10 +83,146 @@
 
     }
 
+    .workerContainer{
+
+        padding-bottom: 0px;
+
+    }
+
     .workerContainer:nth-of-type(2) {
 
         padding-bottom: 25px;
         padding-top: 50px;
+
+    }
+
+    .workerText p{
+
+        font-size: 1em;
+
+    }
+
+}
+
+/*
+
+Services Page CSS
+
+*/
+
+.servicesPage{
+
+    /* height: 100%; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    width: clamp(300px, 95vw, 1000px);
+    margin: 15px 0px;
+
+}
+
+.servicesContainer{
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    background-color: rgba(255, 255, 255, 0.8);
+        box-shadow: 0.09rem 0.09rem 0.3rem rgba(0, 0, 0, 0.2),
+            -0.07rem -0.07rem 0.25rem rgba(0, 0, 0, 0.04);
+    padding: 10px 30px 40px 30px;
+    margin: 20px 0px;
+
+}
+
+.servicesList{
+
+    padding: 30px 45px;
+    font-size: 1.2em;
+    background-color: rgba(255, 255, 255, 0.8);
+        box-shadow: 0.09rem 0.09rem 0.3rem rgba(0, 0, 0, 0.2),
+            -0.07rem -0.07rem 0.25rem rgba(0, 0, 0, 0.04);
+
+}
+
+.servicesContainer h1{
+
+    font-size: 2em;
+    margin-bottom: 0;
+    
+
+}
+
+.servicesContainer h2{
+
+    width: clamp(245px, 60vw, 500px);
+    text-align: center;
+    margin-top: 30px;
+    font-size: 1.2em;
+
+}
+
+#contact2{
+
+    font-size: 1.1em;
+
+}
+
+@media screen and (max-width: 768px) {
+
+    .servicesContainer h1 {
+    
+        font-size: 1.8em;
+        margin-bottom: 0;
+
+
+    }
+
+    .servicesList{
+
+        font-size: 1.1em;
+
+    }
+
+    .servicesContainer h2 {
+
+        font-size: 1em;
+
+    }
+
+    #contact2 {
+
+        font-size: 0.9em;
+
+    }
+
+}
+
+@media screen and (max-width: 426px) {
+
+    .servicesContainer {
+    
+        padding: 5px 15px 20px 15px;
+        margin: 20px 0px;
+
+    }
+
+    .servicesList {
+
+        padding: 15px 40px;
+
+    }
+
+    .servicesContainer h2 {
+
+        margin-top: 15px;
+
+    }
+
+    .servicesContainer h1{
+
+        font-size: 1.6em;
 
     }
 
