--- a/css/index.css
+++ b/css/index.css
@@ -205,6 +205,21 @@ body{
     
 }
 
+.copyRight {
+
+    background-color: rgba(255, 255, 255, 0.9);
+    padding: 5px 10px;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    font-size: 0.7em;
+    font-weight: bold;
+    z-index: 40;
+    border-top: 1px solid rgba(0, 0, 0, 0.2);
+    border-right: 1px solid rgba(0, 0, 0, 0.2);
+
+}
+
 @media screen and (max-width: 1000px) {
 
     .navButton{
@@ -213,6 +228,16 @@ body{
 
     }
     
+}
+
+@media screen and (max-width: 920px){
+
+    .copyRight {
+    
+        font-size: 0.6em;
+
+    }
+
 }
 
 @media screen and (max-width: 700px) {
@@ -253,6 +278,12 @@ body{
     .navigationButtonHolder div:nth-of-type(2){
 
         padding-top: 25px;
+
+    }
+
+    .copyRight {
+
+        font-size: 0.5em;
 
     }
 
