--- a/css/index.css
+++ b/css/index.css
@@ -6,6 +6,12 @@ Styling for the Home Page (index.php)
 @import url(contactModal.css);
 @import url(pages.css);
 
+html, body{
+
+    overflow: hidden;
+
+}
+
 body{
  
     margin: 0;
@@ -27,6 +33,8 @@ body{
     /* background-color: red; */
     display: flex;
     justify-content: center;
+    align-items: flex-start;
+    padding-top: 10px;
 
 }
 
@@ -59,7 +67,7 @@ body{
     position: fixed;
     background-color: rgba(255, 255, 255, 0.5);
     width: 100vw;
-    height: 100vh;
+    height: 100dvh;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -203,7 +211,7 @@ body{
 
     background-color: rgba(255, 255, 255, 0.9);
     width: 100%;
-    height: 100%;
+    height: 100dvh;
     position: fixed;
     border-radius: 50%;
     transform: scale(0);
@@ -388,7 +396,7 @@ body{
 
     flex-direction: column;
     height: 50%;
-    padding: 0;
+    padding: 0 !important;
     width: 150px;
 
 }
