--- a/css/pages.css
+++ b/css/pages.css
@@ -112,7 +112,7 @@ Services Page CSS
 
 .servicesPage{
 
-    /* height: 100%; */
+    height: 94%;
     display: flex;
     align-items: center;
     justify-content: center;
