--- a/css/portfolioGallery.css
+++ b/css/portfolioGallery.css
@@ -6,7 +6,7 @@ Styling for the Portfolio Gallery on the Homepage (index.php)
 
     overflow: hidden;
     width: 100vw;
-    height: 100vh;
+    height: 100dvh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -15,10 +15,11 @@ Styling for the Portfolio Gallery on the Homepage (index.php)
 
 .galleryImage{
 
-    height: 100vh;
+    height: 100dvh;
     width: 100%;
     object-fit: cover;
     transition: opacity 2s ease;
+    overflow: hidden;
 
 }
 
